# kc1fsz-rc1

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
docs/: users.md
hw/audio-1/: README.md  audio-1.kicad_pcb  audio-1.kicad_prl  audio-1.kicad_pro  audio-1.kicad_sch  audio-in.kicad_sch  audio-mux.kicad_sch  audio-out.kicad_sch  power.kicad_sch  rig-interface.kicad_sch
hw/control-1/: .gitignore  control-1.kicad_pcb  control-1.kicad_prl  control-1.kicad_pro  control-1.kicad_sch  power.kicad_sch  radio-control.kicad_sch
hw/digital-2/: README.md  connectors.kicad_sch  controller.kicad_sch  digital-2.kicad_pcb  digital-2.kicad_prl  digital-2.kicad_pro  digital-2.kicad_sch  ui.kicad_sch
hw/if-2/: .gitignore  README.md  adc.kicad_sch  audio_in_0.kicad_sch  audio_in_1.kicad_sch  audio_out_0.kicad_sch  audio_out_1.kicad_sch  connectors.kicad_sch  controls.kicad_sch  controls_0.kicad_sch  controls_1.kicad_sch  dac.kicad_sch  if-2.kicad_pcb  if-2.kicad_prl  if-2.kicad_pro  if-2.kicad_sch  power.kicad_sch
hw/if-2/sim/: in1.asc  out2.asc
hw/ri-3/: audio-input.kicad_sch  audio-output.kicad_sch  controls.kicad_sch  misc.kicad_sch  ri-3.kicad_prl  ri-3.kicad_pro  ri-3.kicad_sch
python/: test-ctcss.py
src/: AudioCore.cpp  AudioCore.h  AudioSourceControl.h  Config.cpp  Config.h  CourtesyToneGenerator.cpp  CourtesyToneGenerator.h  IDToneGenerator.cpp  IDToneGenerator.h  Rx.h  ShellCommand.cpp  ShellCommand.h  Tx.cpp  Tx.h  TxControl.cpp  TxControl.h  VoiceGenerator.cpp  VoiceGenerator.h  audio.h  main.cpp
src/hw/: StdRx.cpp  StdRx.h  StdTx.cpp  StdTx.h
src/test/: TestRx.cpp  TestRx.h  TestTx.cpp  TestTx.h  test-AudioCore.cpp
tests/: dtmf-test-1.cpp
